--- a/index.html
+++ b/index.html
@@ -55,19 +55,22 @@
     <!--About me-->
     <script src="./js/component/aboutme.js"></script>
 
-    <!-- <div class="container mb-5">
-        <h1 class="my-3 text-muted display-light">About Me - My Small Journey</h1>
-        <p class="lead font-weight-light" data-aos="fade-in" data-aos-delay="600">
-            text
-        </p>
-        <div id="projects" class="row"></div>
-    </div> -->
-
     <!--end of About Me-->
+
+
+    <!-- Education -->
+    <script src="./js/component/education.js"></script>
+    <!-- end of Education -->
+
+
+    <!-- Tech Stack -->
+
+    <!-- end of Tech Stack -->
+    
 
     <!--projects-->
     <div class="container mb-5">
-        <h1 class="my-3 text-muted display-light">Our Projects</h1>
+        <h1 class="my-3 text-muted display-light">Projects</h1>
         <div id="projects" class="row"></div>
     </div>
     <!--end of projects-->
