--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 </head>
 
 <body>
-    <!--script that adds the navbar-->
+    <!--navbar-->
     <script src="./js/component/navbar.js"></script>
+    <!--end of Navbar-->
 
-    <!--landup page here!-->
+    <!--landing page starts here!-->
+
+    <!--Intro-->
     <div class="bg-light-main">
         <div class="container py-5">
             <div class="d-flex row align-items-center justify-items-center mh-100">
@@ -51,10 +54,11 @@
             </path>
         </svg>
     </div>
+    <!--end of Intro-->
+
 
     <!--About me-->
     <script src="./js/component/aboutme.js"></script>
-
     <!--end of About Me-->
 
 
@@ -64,31 +68,42 @@
 
 
     <!-- Tech Stack -->
-
+    <script src="./js/component/techstack.js"></script>
     <!-- end of Tech Stack -->
     
+    <!-- Experience -->
+    <script src="./js/component/experience.js"></script>
+    <!--end of Experience-->
 
-    <!--projects-->
-    <div class="container mb-5">
-        <h1 class="my-3 text-muted display-light">Projects</h1>
-        <div id="projects" class="row"></div>
-    </div>
-    <!--end of projects-->
+    <!-- projects -->
+    <!-- Major -->
+    <div>
 
-    <!--contributors-->
-    <div class="container mb-4">
-        <h1 class="my-3 text-muted display-light">Contributors</h1>
-        <marquee behavior="sliding" onmouseover="this.stop();" scrollamount="infinite" onmouseout="this.start();"
-            direction="left" id="contributors" class="d-inline-flex flex-row">
-        </marquee>
     </div>
-    <!--end of contributors-->
+    <!-- Minor -->
+    <div>
+
+    </div>
+    <!-- Codepen -->
+    <div>
+
+    </div>
+    <!--end of Projects-->
+
+    <!-- Contact -->
+    <footer>
+
+    </footer>
+    <!--end of Contacts-->
+
 
     <!--benefits section via static script-->
     <script src="./js/component/benefits.js"></script>
 
     <!--footer-->
     <script src="./js/component/footer.js"></script>
+
+    <!--Landing page ends here-->
 
     <!--scripts-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
