updated footer section

--- a/index.html
+++ b/index.html
@@ -34,10 +34,18 @@
                     <p class="lead font-weight-light" data-aos="fade-in" data-aos-delay="600">
                         Striving for knowledge in Web and AI based technologies through various Learning and experience gathering opportunities. Open to internships...
                     </p>
-                    <a href="./contact.html" target="_blank" data-aos-delay="800" data-aos="fade-bottom">
+
+                    <a href="https://drive.google.com/file/d/1aKXOHXRYavFymGIkRBwHAvmnHCVGbh__/view?usp=sharing" target="_blank" data-aos-delay="800" data-aos="fade-bottom">
                         <button
-                            class="btn btn-primary shadow text-decoration-none btn-link px-5 py-3 mt-3 rounded-0 border-0 text-white bg-main">
-                            Contact
+                            class="btn btn-primary shadow text-decoration-none btn-link px-5 py-3 mt-3 mr-2 rounded-0 border-0 text-white bg-main">
+                            <b>Resume</b>
+                        </button>
+                    </a>
+
+                    <a href="mailto:shreyassukhadeve@iitbbs.ac.in" target="_blank" data-aos-delay="800" data-aos="fade-bottom">
+                        <button
+                            class="btn btn-primary shadow text-decoration-none btn-link px-5 py-3 mt-3 ml-2 rounded-0 border-0 text-white bg-main">
+                            <b>Contact</b>
                         </button>
                     </a>
                 </div>
@@ -76,33 +84,21 @@
     <!--end of Experience-->
 
     <!-- projects -->
-    <!-- Major -->
-    <div>
-
-    </div>
-    <!-- Minor -->
-    <div>
-
-    </div>
-    <!-- Codepen -->
-    <div>
-
-    </div>
+    <script src="./js/component/projects.js"></script>
     <!--end of Projects-->
 
     <!-- Contact -->
-    <footer>
-
-    </footer>
+    <script src="./js/component/footer.js"></script>
     <!--end of Contacts-->
 
 
-    <!--benefits section via static script-->
+    <!-- benefits section via static script
     <script src="./js/component/benefits.js"></script>
 
-    <!--footer-->
-    <script src="./js/component/footer.js"></script>
+    footer
+    <script src="./js/component/footer.js"></script> -->
 
+    
     <!--Landing page ends here-->
 
     <!--scripts-->
